--- a/resources/css/scss/_overrides_b.scss
+++ b/resources/css/scss/_overrides_b.scss
@@ -7,9 +7,17 @@
 */
 
 .k-dropdown {
+	&.xs {
+		max-width: 70px;
+        min-width: 70px;
+	}
 	&.sm {
 		max-width: 110px;
         min-width: 110px;
+	}
+	&.xsm {
+		max-width: 120px;
+        min-width: 120px;
 	}
 	&.md {
         max-width: 140px;
