--- a/resources/css/scss/_overrides_bc.scss
+++ b/resources/css/scss/_overrides_bc.scss
@@ -6,7 +6,7 @@
 */
 .k-dropdown {
 	min-width: 110px !important;
-	height: 28px;
+	height: 26px;
 	.k-dropdown-wrap {
 		&.k-state-disabled,
 		&.k-state-disabled:hover {
@@ -25,8 +25,7 @@
 			color: $gray-2;
 		}
 		.k-input {
-			@include bc-font-size-sm;
-			text-indent: 10px;
+			@include bc-font-size-xsm;
 		}
 	}
 }
