--- a/resources/css/scss/modules/_table_bc.scss
+++ b/resources/css/scss/modules/_table_bc.scss
@@ -39,6 +39,9 @@ td .form-box, th .form-box {
 */
 
 .table {  
+    tbody th {
+        text-align: center;
+    }
     th {
         @include bc-font-size-xsm;
         padding: 0 7px;
