전체 페이지 kendo 언어(한글) 스크립트 추가, B 시스템 수정 사이드바 수정반영

--- a/pages/layout/lnb.html
+++ b/pages/layout/lnb.html
@@ -85,7 +85,7 @@
     <div class="sidebar-foot">
         <div class="btn-box">
             <button data-role="button" class="blue"><i class="h-ico xsm mail">메일</i><span>나의 업무 보관함</span></button>
-            <button data-role="button" class="light-blue-border"><i class="h-ico xsm lnb-close">닫기</i></button>
+            <button data-role="button" class="light-blue-border" id="sidebarFold"><i class="h-ico xsm lnb-close">닫기</i></button>
         </div>
     </div>        
 </aside>
