--- a/pages/layout/header.html
+++ b/pages/layout/header.html
@@ -10,7 +10,7 @@
             </div>
             <div class="timer-box">
                 <span class="timer-set"><i class="h-ico xs time">타이머</i><span id="timer">09:30</span></span>
-                <button type="button" class="h-btn text time-add">로그인연장</button>
+                <button type="button" class="h-btn time-add">로그인연장</button>
             </div>
             <button type="button" class="h-btn logout">로그아웃</button>
         </div>
