--- a/resources/css/index_bp.css
+++ b/resources/css/index_bp.css
@@ -997,12 +997,26 @@ button {
   margin-top: 30px !important;
 }
 
+.my-0 {
+  margin-top: 0px !important;
+  margin-bottom: 0px !important;
+}
+
+.mx-0 {
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+}
+
 .mt-0 {
   margin-top: 0px !important;
 }
 
 .mb-0 {
   margin-bottom: 0px !important;
+}
+
+.mb-10 {
+  margin-bottom: 10px !important;
 }
 
 .ml-20 {
@@ -1029,18 +1043,39 @@ button {
 * ------------------------------
 */
 .divide {
-  padding: 10px 0;
-}
-.divide .list + .list {
-  margin-top: 10px;
-}
-.divide:first-child {
-  margin-top: -6px;
-}
-.divide:last-child {
-  margin-bottom: -6px;
+  padding: 20px 0;
 }
 .divide + .divide {
+  border-top: 1px solid #e4e4e4;
+}
+
+.table-group.divide-thick {
+  position: relative;
+}
+.table-group.divide-thick + .table-group.divide-thick {
+  margin-top: 20px;
+}
+.table-group.divide-thick + .table-group.divide-thick::before {
+  content: "";
+  display: block;
+  height: 8px;
+  margin: 0 -30px;
+  background: #ddd;
+}
+
+td .divide {
+  padding: 10px 0;
+}
+td .divide .list + .list {
+  margin-top: 10px;
+}
+td .divide:first-child {
+  margin-top: -6px;
+}
+td .divide:last-child {
+  margin-bottom: -6px;
+}
+td .divide + .divide {
   border-top: 1px solid #e4e4e4;
 }
 
@@ -1063,6 +1098,11 @@ button {
   letter-spacing: -0.85px;
   color: #222;
   font-weight: 500;
+}
+.sub-title.md {
+  font-size: 17px;
+  line-height: 26px;
+  letter-spacing: -0.85px;
 }
 .sub-title.dot {
   position: relative;
@@ -1104,12 +1144,12 @@ button {
 }
 .title-box.md {
   min-height: 28px;
-  margin: 12px 0 4px;
+  margin: 20px 0 4px;
 }
 .title-box.md .sub-title {
-  font-size: 15px;
+  font-size: 17px;
   line-height: 26px;
-  letter-spacing: -0.75px;
+  letter-spacing: -0.85px;
   min-height: 30px;
   font-weight: 500;
 }
@@ -1294,9 +1334,29 @@ button {
 
 /*
 * ------------------------------
-* File upload BP type
+* tab control
 * ------------------------------
 */
+.tab-control {
+  display: flex;
+  flex-direction: column;
+}
+.tab-control.box .tabpanel {
+  flex: 1 1 100%;
+  margin-top: 10px;
+  padding: 4px 30px 0;
+  background: #fff;
+}
+
+.tab-menu .btn-box {
+  position: absolute;
+  right: 0;
+  bottom: -1px;
+  margin-top: 0;
+  padding-left: 8px;
+  background: #f5f5f5;
+}
+
 /* Flexbox Class */
 .flexbox {
   display: flex;
@@ -1883,8 +1943,22 @@ table {
   margin-top: 30px;
 }
 
+.table-group {
+  display: flex;
+  flex-direction: column;
+}
+.table-group.half {
+  flex-direction: row;
+}
+.table-group.half > * {
+  width: 50%;
+}
+.table-group.half > * + * {
+  margin-left: 20px;
+}
+
 .table-set {
-  margin-top: 12px;
+  flex: 1;
 }
 
 .text-center th,
@@ -1904,6 +1978,14 @@ td .form-box, th .form-box {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.table-guide .list {
+  margin-top: 8px;
+  color: #777;
+  font-size: 13px;
+  line-height: 22px;
+  letter-spacing: -0.65px;
 }
 
 /*
@@ -2100,9 +2182,13 @@ td .form-box, th .form-box {
   width: 89px;
   height: 100%;
   background-color: transparent;
-  border: 0;
+  border: 1px solid #fff;
+  border-radius: 0;
   border-left: 1px solid #eee;
   color: #0e4194;
+}
+.search-control .k-button.search.k-state-focused {
+  border: 1px solid #0e4194;
 }
 .search-control .label {
   font-size: 14px;
@@ -3231,49 +3317,49 @@ th .required {
 .h-ico.menu1 {
   width: 18px;
   height: 18px;
-  background-image: url("../images_bp/icon/icon_profile.svg");
+  background-image: url("../images_bp/icon/icon_standard_default.svg");
   background-size: contain;
 }
 .h-ico.menu2 {
   width: 18px;
   height: 18px;
-  background-image: url("../images_bp/icon/icon_4.svg");
+  background-image: url("../images_bp/icon/icon_contract_default.svg");
   background-size: contain;
 }
 .h-ico.menu3 {
   width: 18px;
   height: 18px;
-  background-image: url("../images_bp/icon/icon_1.svg");
+  background-image: url("../images_bp/icon/icon_calculate_default.svg");
   background-size: contain;
 }
 .h-ico.menu4 {
   width: 18px;
   height: 18px;
-  background-image: url("../images_bp/icon/icon_3.svg");
+  background-image: url("../images_bp/icon/icon_charge_default.svg");
   background-size: contain;
 }
 .h-ico.menu5 {
   width: 18px;
   height: 18px;
-  background-image: url("../images_bp/icon/icon_profile.svg");
+  background-image: url("../images_bp/icon/icon_distribution_default.svg");
   background-size: contain;
 }
 .h-ico.menu6 {
   width: 18px;
   height: 18px;
-  background-image: url("../images_bp/icon/icon_4.svg");
+  background-image: url("../images_bp/icon/icon_accounting_default.svg");
   background-size: contain;
 }
 .h-ico.menu7 {
   width: 18px;
   height: 18px;
-  background-image: url("../images_bp/icon/icon_3.svg");
+  background-image: url("../images_bp/icon/icon_service_default.svg");
   background-size: contain;
 }
 .h-ico.menu8 {
   width: 18px;
   height: 18px;
-  background-image: url("../images_bp/icon/icon_2.svg");
+  background-image: url("../images_bp/icon/icon_athorize_default.svg");
   background-size: contain;
 }
 .h-ico.profile {
@@ -3298,6 +3384,31 @@ th .required {
 }
 .h-ico.tip.k-state-border-down {
   background-image: url("../images_bp/icon/btn_tip_hover.svg");
+}
+
+.active .h-ico.menu1 {
+  background-image: url("../images_bp/icon/icon_standard_selected.svg");
+}
+.active .h-ico.menu2 {
+  background-image: url("../images_bp/icon/icon_contract_selected.svg");
+}
+.active .h-ico.menu3 {
+  background-image: url("../images_bp/icon/icon_calculate_selected.svg");
+}
+.active .h-ico.menu4 {
+  background-image: url("../images_bp/icon/icon_charge_selected.svg");
+}
+.active .h-ico.menu5 {
+  background-image: url("../images_bp/icon/icon_distribution_selected.svg");
+}
+.active .h-ico.menu6 {
+  background-image: url("../images_bp/icon/icon_accounting_selected.svg");
+}
+.active .h-ico.menu7 {
+  background-image: url("../images_bp/icon/icon_service_selected.svg");
+}
+.active .h-ico.menu8 {
+  background-image: url("../images_bp/icon/icon_athorize_selected.svg");
 }
 
 .is-checked .k-i-input-check {
@@ -3884,6 +3995,7 @@ th .required {
 }
 .k-datepicker.sm {
   max-width: 120px;
+  min-width: 120px;
 }
 .k-datepicker .k-picker-wrap {
   display: flex;
@@ -3925,6 +4037,9 @@ th .required {
   border: 1px solid #222;
   background-color: #fff;
   overflow: hidden;
+}
+.k-calendar.only-year .k-calendar-view {
+  display: none;
 }
 .k-calendar .k-header {
   font-size: 14px;
@@ -3996,8 +4111,40 @@ th .required {
   letter-spacing: -0.65px;
   font-weight: 500;
 }
+.k-calendar .k-content .k-other-month.k-state-hover .k-link, .k-calendar .k-content .k-other-month.k-state-active .k-link, .k-calendar .k-content .k-other-month.k-state-focused .k-link {
+  border: 1px solid transparent;
+}
 .k-calendar .k-content .k-other-month .k-link {
+  margin: 0;
   color: #aaa;
+  border: 1px solid transparent;
+}
+.k-calendar .k-content.k-year {
+  height: 100%;
+}
+.k-calendar .k-content.k-year.k-state-hover .k-link, .k-calendar .k-content.k-year.k-state-active .k-link, .k-calendar .k-content.k-year.k-state-focused .k-link {
+  border: 1px solid transparent;
+}
+.k-calendar .k-content.k-year .k-link {
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid transparent;
+}
+.k-calendar .k-content.k-decade, .k-calendar .k-content.k-century {
+  height: 100%;
+}
+.k-calendar .k-content.k-decade .k-state-active,
+.k-calendar .k-content.k-decade .k-state-focused, .k-calendar .k-content.k-century .k-state-active,
+.k-calendar .k-content.k-century .k-state-focused {
+  border: 1px solid transparent;
+}
+.k-calendar .k-content.k-decade .k-link, .k-calendar .k-content.k-century .k-link {
+  width: 100%;
+  height: auto;
+  margin: 0;
+  border: 1px solid transparent;
+  border-radius: 0;
+  text-align: center;
 }
 .k-calendar .k-content .k-link {
   display: flex;
@@ -4024,9 +4171,6 @@ th .required {
   background-color: #fff;
   border: 1px solid #0e4194;
   color: #0e4194;
-}
-.k-calendar .k-footer {
-  display: none !important;
 }
 
 /*
@@ -4564,6 +4708,16 @@ th .required {
 }
 .send-form-set .editor-box .k-editor {
   border: 0;
+}
+
+/*
+* ------------------------------
+* tab
+* ------------------------------
+*/
+.k-tabstrip-wrapper {
+  display: flex;
+  flex: 1;
 }
 
 /*
@@ -8726,6 +8880,8 @@ th .required {
 }
 
 .contents-wrap {
+  display: flex;
+  flex-direction: column;
   flex: 1 0;
   padding: 20px 30px 30px;
   overflow: auto;
@@ -8799,10 +8955,17 @@ th .required {
   background-color: #3064b8;
   border-radius: 3px;
 }
-.timer-box .btn-text {
+.timer-box .time-add {
   font-size: 14px;
   line-height: 26px;
   letter-spacing: -0.7px;
+  height: auto;
+  padding: 0;
+  border-radius: 0;
+  border: none;
+  background-color: transparent;
+  color: #fff;
+  font-weight: 400;
   text-decoration: underline;
 }
 .timer-box > * + * {
@@ -8823,6 +8986,11 @@ th .required {
 
 /*
 * ------------------------------
+* container
+* ------------------------------
+*/
+/*
+* ------------------------------
 * Sidebar
 * ------------------------------
 */
@@ -8833,7 +9001,43 @@ th .required {
   max-width: 220px;
   background-color: #fff;
   border-right: 1px solid #ddd;
-  transition: margin 0.2s;
+  transition: max-width, margin 0.2s ease;
+}
+.sidebar-wrap.fold {
+  max-width: 60px;
+  transition: all 0.1s ease;
+}
+.sidebar-wrap.fold .sidebar-head .main-menu span,
+.sidebar-wrap.fold .sidebar-head .sub-menu,
+.sidebar-wrap.fold .sidebar-1depth span,
+.sidebar-wrap.fold .sidebar-2depth,
+.sidebar-wrap.fold .sidebar-foot button span,
+.sidebar-wrap.fold .sidebar-1depth::after {
+  display: none !important;
+}
+.sidebar-wrap.fold .sidebar-head {
+  padding: 22px 0 22px;
+}
+.sidebar-wrap.fold .sidebar-foot .btn-box {
+  display: flex;
+  flex-direction: column;
+}
+.sidebar-wrap.fold .sidebar-foot button {
+  width: 40px;
+  height: 40px;
+  margin: 0;
+  padding: 0;
+}
+.sidebar-wrap.fold .sidebar-foot button:first-child {
+  order: 2;
+}
+.sidebar-wrap.fold .sidebar-foot button:last-child {
+  order: 1;
+  margin-bottom: 8px;
+}
+.sidebar-wrap.fold .sidebar-foot .h-ico.lnb-close {
+  transform: rotate(180deg);
+  transition: all 0.3s ease;
 }
 .sidebar-wrap .sidebar-head {
   position: relative;
