--- a/resources/css/scss/index.scss
+++ b/resources/css/scss/index.scss
@@ -18,3 +18,66 @@
 @import "layout_b";  
 @import "layout"; //공통   
      
+.contents-body {
+    height: 100%;
+}
+.table-group {
+    display: flex;
+    // justify-content: flex-start;
+    // flex-direction: column;
+    height: 100%;
+}
+.k-tabstrip-wrapper > .k-tabstrip {
+    flex: 1 1 auto;
+}
+.tabpanel {
+    flex: 1;
+    .table-set {
+       height: 100%;
+    // flex: 1;
+    }
+    
+}
+.k-toolbar.k-grid-toolbar {
+    background-color: $bg;;
+    overflow: hidden;
+}
+.table-content.grid { 
+    position: relative;
+    height: 100%;
+    // flex: 1;
+    .k-grid {
+        // height: 100%;
+    flex: 1;
+    }
+}
+.k-grid-header {
+    border-bottom: 1px solid $gray-a;
+}
+.k-grid-content {
+    min-height: 150px;
+    max-height: 200px;
+    padding-bottom: 58px;
+    overflow: auto;
+}
+.k-tabstrip-wrapper {
+    flex: 1;
+}
+.table-bottom {
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    border-bottom: 0;
+    border-top: 1px solid $gray-a;
+    box-shadow: none;
+    .btn-box {
+        margin-top: 0;
+    }
+}
+.status-reject td {
+    background: $reject !important;
+}
+.status-wait td {
+    background: $wait !important;
+}
