테이블 높이 수정, 하단 패딩 수정

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -8284,7 +8284,7 @@ th .required {
 }
 
 .contents-body {
-  height: 100%;
+  flex: 1;
 }
 
 .table-group {
@@ -8306,6 +8306,10 @@ th .required {
 .k-toolbar.k-grid-toolbar {
   background-color: #f5f5f5;
   overflow: hidden;
+}
+
+.table-group.divide-thick {
+  height: unset;
 }
 
 .table-content.grid {
